<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/shape_circular_white"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/offline_notification_title"
        android:textColor="@color/common_font_black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/offline_notification_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offline_force_offline" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/restart_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/transparent"
            android:paddingTop="16dp"
            android:text="@string/goto_login_activity"
            android:textColor="@color/common_font_black"
            android:visibility="gone" />

        <TextView
            android:id="@+id/goto_login_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@color/transparent"
            android:paddingTop="16dp"
            android:text="@string/restart_login"
            android:textColor="@color/common_font_black" />
    </RelativeLayout>
</LinearLayout>
