<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_text_white_gray">

        <TextView
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:gravity="start|center_vertical"
            android:hint="@string/prompt_user"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_user"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/please_input_user"
            android:maxLength="24"
            android:maxLines="1"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_clear_user"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:padding="14dp"
            android:src="@drawable/ic_clear"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_text_white_gray"
        android:orientation="horizontal">

        <TextView
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:gravity="start|center_vertical"
            android:hint="@string/prompt_password"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@null"
            android:digits="@string/rule_password"
            android:hint="@string/input_password_hint"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_clear_password"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:padding="14dp"
            android:src="@drawable/ic_clear"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_text_white_gray"
        android:orientation="horizontal">

        <TextView
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:gravity="start|center_vertical"
            android:hint="@string/repetition_password"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_password_02"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@null"
            android:digits="@string/rule_password"
            android:hint="@string/input_password_hint"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_clear_password_02"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:padding="14dp"
            android:src="@drawable/ic_clear"
            android:visibility="gone" />
    </LinearLayout>

    <Button
        android:enabled="false"
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/selector_login_button"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:id="@+id/tv_register_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_by_phone"
        android:textColor="@color/blue"
        android:textSize="@dimen/common_font_size_mid_14" />
</LinearLayout>
