<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/shape_circular_translucence"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/select_color"
            android:textSize="@dimen/common_font_size_big_20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/tip_select_bg_color"
            android:textColor="@color/red"
            android:textSize="@dimen/common_font_size_mid_14" />

        <com.example.hbz.besideyou.view.doodle.ColorSelectLayout
            android:id="@+id/color_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_login_button"
            android:text="@string/confirm_str" />
    </LinearLayout>
</ScrollView>
