<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_circular_translucence"
    android:orientation="vertical">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/web_socket_address_input" />

            <EditText
                android:id="@+id/et_web_socket_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/web_socket_address_input"
                android:text="http://192.168.1.1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/web_socket_room_input" />

            <EditText
                android:id="@+id/et_web_socket_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/web_socket_room_input"
                android:text="a" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/selector_login_button"
        android:text="@string/confirm_str" />
</LinearLayout>

