<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--导航栏-->
    <LinearLayout
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/shap_blue_gradient_ramp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:paddingBottom="12dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="12dp"
            android:src="@drawable/ic_back_write" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/create_room"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/iv_setting"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:paddingBottom="12dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="12dp"
            android:src="@drawable/ic_setting_white" />

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--是否允许通过房间号加入房间-->
            <CheckBox
                android:id="@+id/cb_allow_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:checked="true"
                android:text="@string/select_join_from_room_tip"
                android:textColor="@color/common_font_gray" />

            <include layout="@layout/common_line_match_gray" />

            <!--是否允许房间其他人邀请进入-->
            <CheckBox
                android:id="@+id/cb_allow_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:checked="true"
                android:text="@string/select_join_from_other_tip"
                android:textColor="@color/common_font_gray" />

            <include layout="@layout/common_line_match_gray" />

            <!--邀请好友-->
            <LinearLayout
                android:id="@+id/ll_invite_friends"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_margin="8dp"
                android:gravity="center_vertical"
                android:textColor="@color/common_font_gray">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/invite_friends"
                    android:textSize="16dp" />

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:padding="8dp"
                    android:src="@drawable/invite_friends" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_friend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp" />

            <include layout="@layout/common_line_match_gray" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_create_room"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/create_room"
        android:textColor="@color/white"
        android:textSize="@dimen/common_font_size_mid_16" />
</LinearLayout>
